Aligned the header and trying to fix the contact me section.

--- a/css/style.css
+++ b/css/style.css
@@ -371,7 +371,7 @@ h2 {
 }
 
 .nav {
-    padding: 18px 0;
+    padding: 25px 0;
 }
 
 .navbar .navbar-collapse .nav li a {
